	  Don't let requests hang when there is a dns error when processing a
	  fragmented request (e.g. multiget with multiple keys) (tyson)
	  Allow extra parameters for redis spop (charsyam)
	  Update documentation and README (various)
	  Fix memory leak bug for redis mset (deep011)
	  Support arbitrarily deep nested redis multi-bulk
	  responses (nested arrays) (qingping209, tyson)

 2015-22-06  Manju Rajashekhar  <manj@cs.stanford.edu>
    * twemproxy: version 0.4.1 release
      backend server hostnames are resolved lazily
      redis_auth is only valid for a redis pool
      getaddrinfo returns non-zero +ve value on error
      fix-hang-when-command-only (charsyam)
      fix bug crash when get command without key and whitespace (charsyam)
      mark server as failed on protocol level transiet failures like -OOM, -LOADING, etc
      implemented support for parsing fine grained redis error response
      remove redundant conditional judgement in rbtree deletion (leo ma)
      fix bug mset has invalid pair (charsyam)
      fix bug mset has invalid pair (charsyam)
      temp fix a core on kqueue (idning)
      support "touch" command for memcached (panmiaocai)
      fix redis parse rsp bug (charsyam)
      SORT command can take multiple arguments. So it should be part of redis_argn() and not redis_arg0()
      remove incorrect assert because client could send data after sending a quit request which must be discarded
      allow file permissions to be set for UNIX domain listening socket (ori liveneh)
      return error if formatted is greater than mbuf size by using nc_vsnprintf() in msg_prepend_format()
      fix req_make_reply on msg_get, mark it as response (idning)
      redis database select upon connect (arne claus)
      redis_auth (charsyam)
      allow null key(empty key) (idning)
      fix core on invalid mset like "mset a a a" (idning)

2014-18-10  idning <idning@gmail.com>
    * twemproxy: version 0.4.0 release
      mget improve (idning)