@@ -1,7 +1,3 @@
 SUBDIRS = yaml-0.2.5
 
 EXTRA_DIST = yaml-0.2.5.tar.gz
-
-AM_CFLAGS =
-AM_CFLAGS += -Wno-maybe-uninitialized
-AM_CFLAGS += -Wno-pointer-sign -Wno-sign-conversion -Wno-unused-value -Wno-builtin-declaration-mismatch
