@@ -114,6 +114,18 @@ struct logger {
     }                                                                       \
 } while (0)
 
+
+#ifdef __GNUC__
+# define NC_GCC_VERSION (__GNUC__ * 1000 + __GNUC_MINOR__)
+#else
+# define NC_GCC_VERSION 0
+#endif
+#if NC_GCC_VERSION >= 2007
+#define NC_ATTRIBUTE_FORMAT(type, idx, first) __attribute__ ((format(type, idx, first)))
+#else
+#define NC_ATTRIBUTE_FORMAT(type, idx, first)
+#endif
+
 int log_init(int level, char *filename);
 void log_deinit(void);
 void log_level_up(void);
@@ -122,10 +134,10 @@ void log_level_set(int level);
 void log_stacktrace(void);
 void log_reopen(void);
 int log_loggable(int level);
-void _log(const char *file, int line, int panic, const char *fmt, ...);
-void _log_stderr(const char *fmt, ...);
-void _log_safe(const char *fmt, ...);
-void _log_stderr_safe(const char *fmt, ...);
+void _log(const char *file, int line, int panic, const char *fmt, ...) NC_ATTRIBUTE_FORMAT(printf, 4, 5);
+void _log_stderr(const char *fmt, ...) NC_ATTRIBUTE_FORMAT(printf, 1, 2);
+void _log_safe(const char *fmt, ...) NC_ATTRIBUTE_FORMAT(printf, 1, 2);
+void _log_stderr_safe(const char *fmt, ...) NC_ATTRIBUTE_FORMAT(printf, 1, 2);
 void _log_hexdump(const char *file, int line, char *data, int datalen, const char *fmt, ...);
 
 #endif
