@@ -20,6 +20,9 @@
 	  Fix memory leak bug for redis mset (deep011)
 	  Support arbitrarily deep nested redis multi-bulk
 	  responses (nested arrays) (qingping209, tyson)
+	  Upgrade from libyaml 0.1.4 to 0.2.5 (tyson)
+	  Fix compiler warnings about wrong conversion specifiers in format
+	  strings for logging (tyson)
 
  2015-22-06  Manju Rajashekhar  <manj@cs.stanford.edu>
     * twemproxy: version 0.4.1 release
